rough draft of scripts

--- a/pingpong.html
+++ b/pingpong.html
@@ -10,6 +10,7 @@
 
   <body>
     <div class="container">
+      <header class="jumbotron">
       <h1> Ping Pong! </h1>
       <p><img src= pingpong.jpg id ="pingpongball"></p>
 
@@ -29,6 +30,8 @@
       <div class=row>
         <div class="col-md-10">
           <div id="output" class="well">
+            <ul>
+              </ul>
             </div>
           </div>
         </div>
