submit button not working

--- a/pingpong.html
+++ b/pingpong.html
@@ -16,7 +16,7 @@
 
       <div class="form-row"
         <div class="col-md-10">
-          <form-id="user-number">
+          <form id="user-number">
             <div class="form-group">
               <label for="numb">Enter a number!</label>
               <input class="form-control" id="numb" type="text">
