--- a/pingpong.html
+++ b/pingpong.html
@@ -27,7 +27,7 @@
       </div>
       <br>
 
-      <div class=row>
+      <div class=row-centered>
         <div class="col-md-10">
           <div id="output" class="well">
             <ul>
